# signature-tsc

./: .gitignore  README.md  environment.yaml  pyproject.toml
configs/: default.yaml  epilepsy_sigC_LL.yaml  minirocket.yaml  sig_models_grid_test1_2026-03-05_02-22-00.yaml  sig_models_grid_test2_2026-03-05_04-42-32.yaml  suite_mtsc.yaml  suite_mtsc_v2.yaml  suite_sig_models_grid.yaml  suite_stress_grid.yaml  suite_warp_shift.yaml
src/sigtsc/: cli.py
src/sigtsc/data/: loaders.py  transforms.py
src/sigtsc/experiments/: aggregate_results.py  plot_results.py  run_experiment.py  run_suite.py
src/sigtsc/features/: augmentations.py  signature.py
src/sigtsc/models/: baselines.py
src/sigtsc/scripts/: generate_suite_config.py
src/sigtsc/utils/: git.py  io.py  seed.py
